IE11 fullscreen z-index fix

--- a/src/styles/_video-wrapper.scss
+++ b/src/styles/_video-wrapper.scss
@@ -20,7 +20,6 @@
 .videoWrapper__close {
 	background: $primary-color-lightest;
 	border-bottom: 1px solid $primary-color;
-	position: absolute;
 	width: 100%;
 	margin: auto;
 	padding: $space-xs;
@@ -30,6 +29,11 @@
 	text-align: center;
 	z-index: 999;
 	display: none;
+	position: absolute;
+	@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) { // IE 11
+		position: fixed;
+		z-index: 2147483647;
+	}
 }
 
 .videoWrapper__fullscreen {
